@@ -1,0 +1,1 @@
+~sys-kernel/calculate-sources-2.6.39.4-r1 amd64
