@@ -39,6 +39,7 @@ EBUILD calculate-sources-2.6.35.9.ebuild 1326 RMD160 86da1c1ce9cbd550dfbea00bd76
 EBUILD calculate-sources-2.6.36.4.ebuild 1325 RMD160 ca84789928429048f21834dc50b31cd921bfef72 SHA1 fae947a05ee0e179167a19eec2597475ad4aaff7 SHA256 261e22b1f6000039b006e00eca83a524d4614a6cfb329b35cfa09180cbb086c6
 EBUILD calculate-sources-2.6.37.6.ebuild 1363 RMD160 561f6dba1255bb37fa01773783a317dd7fe5962d SHA1 d81892ab54e7e29816b1803b08f8e55d9481e70e SHA256 78dd68dceacc46140b9b16f11c052cfc757e7105cf7569f11f24a7f18848286b
 EBUILD calculate-sources-2.6.38.8.ebuild 744 RMD160 4d0334c6dd67a0a89aabb809239e79f52c4941cb SHA1 18a81f5fc9d309104dff70d96d46b5cb161c1492 SHA256 e997164cc8fcf5fd474c39cf35e518dea55878e4131a4037248aaf79cae9d3c7
+EBUILD calculate-sources-2.6.39.4-r1.ebuild 746 RMD160 67ca1ff5ab4d3d593ab50efaea3ce4e632cf62f4 SHA1 e84d2ba547440e5546bdbc51fedf310cc68dd8c2 SHA256 eb949421bdbe497318fa3b460591c20dcc76fde4f716da9d794c0e7bf1df126b
 EBUILD calculate-sources-2.6.39.4.ebuild 744 RMD160 4d0334c6dd67a0a89aabb809239e79f52c4941cb SHA1 18a81f5fc9d309104dff70d96d46b5cb161c1492 SHA256 e997164cc8fcf5fd474c39cf35e518dea55878e4131a4037248aaf79cae9d3c7
-MISC ChangeLog 7114 RMD160 744a961941f86cfc0965099d368b696697507c1c SHA1 d6fd59e8ef2f1210a2d0b4493d5ce8ba94c05b91 SHA256 7e9a05fff6069f3ed5dc2b118c035f5e948569448aeefa578122723f16ad6ac8
+MISC ChangeLog 7344 RMD160 f3f0e79ad201b2b52f9e7000eec7d02b21dc6291 SHA1 8c7b91132f99559d07a8df779a50b138f8117e31 SHA256 f81a9534ed1943a6ea658b803db854e9dd835a5006c977fd6e58bbae1c486ee2
 MISC metadata.xml 523 RMD160 855108e020b3f1fe32f843accc94a57f15affa0e SHA1 7fbeb862ff719c9ef63925b7f18104ff6eac27dd SHA256 997dc6d02e44eef86cc9653d7588b9f65e9033f02e28b3a8d98f48df82561f3c
