@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-sources-2.6.39.4-r1 (12 Aug 2011)
+
+  12 Aug 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  +calculate-sources-2.6.39.4-r1.ebuild:
+  Update calculate-sources-2.6.39.4-r1 with fix IA32 support (IssueID #344).
+
 *calculate-sources-2.6.39.4 (09 Aug 2011)
 
   09 Aug 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
